<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CalculatorActivity">
    <item
        android:id="@+id/mainMenuAngle"
        android:title=""
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/mainMenuAngleRadians"
                android:title="@string/mainMenuAngleRadians" />
            <item
                android:id="@+id/mainMenuAngleDegrees"
                android:title="@string/mainMenuAngleDegrees" />
        </menu>
    </item>
    <item
        android:id="@+id/mainMenuClearHistory"
        android:title="@string/mainMenuClearHistory"
        app:showAsAction="never" />
    <item
        android:id="@+id/mainMenuClearVariables"
        android:title="@string/mainMenuClearVariables"
        app:showAsAction="never" />
</menu>