<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aleksiprograms.calculator.fragments.VariablesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/variablesListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@color/colorWhite"
            android:dividerHeight="0.5dp"></ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:padding="10dp">

            <EditText
                android:id="@+id/variableEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:hint="@string/variablesHintName"
                android:inputType="text"
                android:maxLength="15"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/variableEditTextValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:hint="@string/variablesHintValue"
                android:inputType="numberDecimal"
                android:maxLength="15"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/variableButtonSave"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="end"
                android:background="@drawable/color_button_blue_fill"
                android:text="@string/variablesSaveVariable"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
